# regseq-charon

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
charon_lib/: Cargo.toml
charon_lib/src/: errors.rs  lib.rs  options.rs
charon_lib/src/ids/: mod.rs
charon_translate/: Cargo.toml
charon_translate/src/: lib.rs
charon_translate/src/translate/: get_mir.rs  mod.rs  translate_bodies.rs  translate_closures.rs  translate_constants.rs  translate_crate.rs  translate_ctx.rs  translate_functions.rs  translate_generics.rs  translate_items.rs  translate_meta.rs  translate_predicates.rs  translate_types.rs
src/: errors.rs  lib.rs
src/translate/: get_mir.rs  mod.rs  translate_bodies.rs  translate_closures.rs  translate_constants.rs  translate_crate.rs  translate_ctx.rs  translate_functions.rs  translate_generics.rs  translate_items.rs  translate_meta.rs  translate_predicates.rs  translate_types.rs
